fix: resolve layout issue for auth pages by setting the height and width of the app

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,6 +3,8 @@
 #app {
  
   margin: 0 ;
+  height: 100vh;
+  width: 100vw;
 
 }
 
